-
Bug
-
Resolution: Fixed
-
Minor
-
Lustre 2.7.0
-
None
-
3
-
9223372036854775807
Customer reported not being able to run job because the job could not always get the contiguous memory it required. Memory was too fragmented. The primary source of the fragmentation was traced to the Lustre cfs_trace_data pages that are allocated and freed dynamically. Over 99% of the debug messages were the matched open messages issued by mdc_close:
DEBUG_REQ(D_HA, mod->mod_open_req, "matched open; tag %d", tag);
The customer was able to work around the problem by removing HA from the default set of debug trace flags. This is a reasonable workaround but not a good solution because the HA tracing is often useful for diagnosing connection problems, particularly at mount time.
The matched open debug message, however, is not nearly as useful as the other HA messages. So moving the message under a different debug flag, one that must be set explicitly, reduces the amount of default tracing and thereby helps reduce fragmentation at a fairly low cost. With HA eliminated as a possible debug type, the only other available flag that makes much sense is OTHER. Thus, let's change D_HA in the above DEBUG_REQ statement to D_OTHER.